sfClaude/force-app/main/default/objects/Event_Session__c/Event_Session__c.object-meta.xml
<CustomObject>
    <label>Event Session</label>
    <pluralLabel>Event Sessions</pluralLabel>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <description>Represents a distinct sub-session within a multi-session charity event (e.g. Dinner, Auction, Keynote). Optional — only populated for complex events that require individual session tracking. Related list appears on the Event record page (configured in Epic 6). Sharing is Controlled by Parent via Master-Detail to Event__c.</description>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>