sfClaude/force-app/main/default/objects/Event_Session__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>The maximum number of attendees that can participate in this session. Optional — leave blank if this session has no separate capacity limit from the overall event. Used for session-level capacity planning where rooms or breakout spaces have their own limits.</description>
    <inlineHelpText>Optionally enter the maximum number of attendees for this session. Leave blank if the session uses the overall event capacity.</inlineHelpText>
</CustomField>