sfClaude/force-app/main/default/objects/Event_Session__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <label>End Date &amp; Time</label>
    <type>DateTime</type>
    <required>true</required>
    <description>The date and time this session ends. Must be after Start_DateTime__c and within the parent event window. Used alongside Start_DateTime__c for scheduling and programme generation.</description>
    <inlineHelpText>Enter the end date and time for this session. Must be after the Start Date &amp; Time.</inlineHelpText>
</CustomField>