sfClaude/force-app/main/default/objects/Event_Session__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>MasterDetail</type>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Master-Detail relationship to the parent Event__c record. Cascade delete removes all sessions when the parent event is deleted. Sets sharing to Controlled by Parent.</description>
    <inlineHelpText>The event this session belongs to. Set automatically and cannot be changed after creation.</inlineHelpText>
</CustomField>