sfClaude/force-app/main/default/objects/Event_Session__c/fields/Location_Detail__c.field-meta.xml
<CustomField>
    <fullName>Location_Detail__c</fullName>
    <label>Location Detail</label>
    <type>Text</type>
    <length>255</length>
    <description>A specific room, area, or sub-location within the event venue where this session takes place (e.g. "Room B, Ground Floor", "Main Stage", "Breakout Suite 3"). Supplements the venue-level address held on the parent Event__c record.</description>
    <inlineHelpText>Enter the specific location within the venue for this session, e.g. "Room B, Ground Floor" or "Main Stage".</inlineHelpText>
</CustomField>