sfClaude/force-app/main/default/objects/Event_Session__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Sessions (Speaker)</relationshipLabel>
    <relationshipName>Event_Sessions_Speaker</relationshipName>
    <description>The Contact record of the speaker or facilitator for this session. Optional — leave blank for sessions with no named speaker. Used in event programmes and speaker acknowledgement communications.</description>
    <inlineHelpText>Optionally select the speaker or facilitator for this session. Leave blank if there is no named speaker.</inlineHelpText>
</CustomField>