sfClaude/force-app/main/default/objects/Event_Session__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <label>Start Date &amp; Time</label>
    <type>DateTime</type>
    <required>true</required>
    <description>The date and time this session begins. Must fall within the parent event's Start_DateTime__c and End_DateTime__c window. Used for session scheduling and printed event programmes.</description>
    <inlineHelpText>Enter the start date and time for this session. Must be within the overall event dates.</inlineHelpText>
</CustomField>